# physics-engine

./: .gitignore  CMakeLists.txt  README.md
src/engine/: object.cpp  object.hpp  physics_simulation.cpp  physics_simulation.hpp
src/math/: matrix.hpp  vector.hpp
test/: main.cpp  matrix_tests.cpp  vector_unittest.cpp
test/engine/: object_tests.cpp  physics_simulation_tests.cpp
